--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling>=1.20"]
 build-backend = "hatchling.build"
 
 [project]
-name = "socialsearch"
+name = "vociro"
 version = "0.1.0"
 requires-python = ">=3.9"
 description = "Multisource sentiment-focused research assistant (Reddit, Bluesky, optional Web)."
@@ -18,7 +18,7 @@ dependencies = [
 ]
 
 [project.scripts]
-socialsearch = "socialsearch_cli:main"
+vociro = "socialsearch_cli:main"
 
 [tool.hatch.build]
 packages = ["."]
