--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "vociro"
 version = "0.1.1"
 requires-python = ">=3.9"
-description = "Multisource sentiment-focused research assistant (Reddit, Bluesky, optional Web)."
+description = "Multisource social-media search assistant for sentiment analysis (Reddit, Bluesky, optional Web)."
 readme = "README.md"
 authors = [{name = "Your Name", email = "you@example.com"}]
 license = {text = "MIT"}
