--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "openai>=1.13",
     "requests>=2.31",
     "rich>=13.7",
-    "python-dotenv>=1.0"
+    "python-dotenv>=1.0",
+    "rank_bm25"
 ]
 
 [project.scripts]
